export const snapshot = {};

snapshot[`Instructions > ADD Instruction > should define an ADD instruction if the field is an array of nodes, the field nodes don't exist and no instructions are specified on the field definition 1`] = `
[
  {
    definition: {
      kind: "FunctionDeclaration",
      parameters: [
      ],
    },
    field: "statements",
    nodeID: "",
    type: "ADD",
  },
]
`;

snapshot[`Instructions > ADD Instruction > should define an ADD instruction if the field is an array of nodes, the field nodes don't exist and instructions are specified on the field definition 1`] = `
[
  {
    definition: {
      kind: "FunctionDeclaration",
      parameters: [
      ],
    },
    field: "statements",
    nodeID: "",
    type: "ADD",
  },
]
`;

snapshot[`Instructions > ADD Instruction > should define an ADD instruction if the field is an array of nodes, the field nodes exist and no instructions are specified on the field definition 1`] = `
[
  {
    definition: {
      kind: "FunctionDeclaration",
      parameters: [
      ],
    },
    field: "statements",
    nodeID: "",
    type: "ADD",
  },
]
`;

snapshot[`Instructions > ADD Instruction > should define an ADD instruction if the field is an array of nodes and the field node is not found using the defined instruction ID 1`] = `
[
  {
    definition: {
      kind: "FunctionDeclaration",
      name: {
        kind: "Identifier",
        text: "hello",
      },
      parameters: [
      ],
    },
    field: "statements",
    nodeID: "",
    type: "ADD",
  },
]
`;

snapshot[`Instructions > ADD Instruction > should not define an ADD instruction if the field is an array of nodes and the field node is found using the defined instruction ID 1`] = `
[
]
`;

snapshot[`Instructions > ADD Instruction > should define an ADD instruction if the field is an array of nodes and the field is a nested definition 1`] = `
[
  {
    definition: {
      kind: "ExportKeyword",
    },
    field: "modifiers",
    nodeID: "statements[0]",
    type: "ADD",
  },
  {
    definition: {
      kind: "AsyncKeyword",
    },
    field: "modifiers",
    nodeID: "statements[0]",
    type: "ADD",
  },
]
`;

snapshot[`Instructions > SET Instruction > should define an SET instruction if the field is a node, the field node doesn't exist and no instructions are specified on the field definition 1`] = `
[
  {
    definition: {
      kind: "VoidKeyword",
    },
    field: "type",
    nodeID: "statements[0]",
    type: "SET",
  },
]
`;

snapshot[`Instructions > SET Instruction > should define an SET instruction if the field is a node and the field node is not found using the defined instruction ID 1`] = `
[
  {
    definition: {
      kind: "VoidKeyword",
    },
    field: "type",
    nodeID: "statements[0]",
    type: "SET",
  },
]
`;

snapshot[`Instructions > SET Instruction > should not define an SET instruction if the field is a node, the field node exists and no instructions are specified on the field definition 1`] = `
[
]
`;

snapshot[`Instructions > SET Instruction > should not define an SET instruction if the field is a node and the field node is found using the defined instruction ID 1`] = `
[
]
`;

snapshot[`Instructions > INSERT Instruction > should define an INSERT instruction if the field is an array of nodes, a rule evaluates to an INSERT instruction and a numerical index is defined for the INSERT position 1`] = `
[
  {
    definition: {
      kind: "FunctionDeclaration",
      name: {
        kind: "Identifier",
        text: "hello",
      },
      parameters: [
      ],
    },
    field: "statements",
    index: 0,
    nodeID: "",
    type: "INSERT",
  },
]
`;

snapshot[`Instructions > INSERT Instruction > should define an INSERT instruction if the field is an array of nodes, a rule evaluates to an INSERT instruction and a string index is evaluated to an integer for the INSERT position 1`] = `
[
  {
    definition: {
      kind: "FunctionDeclaration",
      name: {
        kind: "Identifier",
        text: "hello",
      },
      parameters: [
      ],
    },
    field: "statements",
    index: 0,
    nodeID: "",
    type: "INSERT",
  },
]
`;

snapshot[`Instructions > INSERT Instruction > should not define an INSERT instruction if the field is an array of nodes and the rules does not evaluate to an instruction 1`] = `
[
]
`;
